--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div class="box">
     <img src="user.png" class="user">
-        <h1>Login Here</h1>
+        <h1>Logins Here</h1>
 
         <form name="myform" onsubmit="return vfun()">
 
